--- a/ultimas-noticias/proxy/pruebas.ipynb
+++ b/ultimas-noticias/proxy/pruebas.ipynb
@@ -2,26 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'proxy_ip': '45.147.60.243', 'proxy_port': '29842', 'username': 'dredon', 'password': 'xD7w0cPQ', 'proxy_status': 'online'}]\n"
+      "[{'proxy_ip': '45.147.60.243', 'proxy_port': '29842', 'username': 'dredon', 'password': 'xD7w0cPQ', 'proxy_status': 'online'}]\n",
+      "45.147.60.243\n",
+      "29842\n",
+      "dredon\n",
+      "xD7w0cPQ\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m todos \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mloads(apiproxy\u001b[39m.\u001b[39mtext)\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(todos)\n\u001b[0;32m----> 8\u001b[0m \u001b[39mprint\u001b[39m(todos[\u001b[39m'\u001b[39;49m\u001b[39mproxy_ip\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[1;32m     10\u001b[0m \u001b[39mprint\u001b[39m(servidor)\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
+     "data": {
+      "text/plain": [
+       "'http://dredon:xD7w0cPQ@45.147.60.243:29842'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -31,12 +34,41 @@
     "apiproxy = requests.get(\"https://api.myprivateproxy.net/v1/fetchProxies/json/full/cu47s8oxdjivgf14to3ey2vywlk2o4u9\")\n",
     "todos = json.loads(apiproxy.text)\n",
     "\n",
-    "print(todos)\n",
     "\n",
-    "servidor = todos['proxy_ip']\n",
+    "servidor = json.dumps(todos[0]['proxy_ip'])\n",
+    "puerto = json.dumps(todos[0]['proxy_port'])\n",
+    "usuario = json.dumps(todos[0]['username'])\n",
+    "contraseña = json.dumps(todos[0]['password'])\n",
+    "\n",
+    "servidor = servidor.replace('\"','')\n",
+    "puerto = puerto.replace('\"','')\n",
+    "usuario = usuario.replace('\"','')\n",
+    "contraseña = contraseña.replace('\"','')\n",
+    "\n",
     "\n",
     "print(servidor)\n",
-    "\n"
+    "print(puerto)\n",
+    "print(usuario)\n",
+    "print(contraseña)\n",
+    "\n",
+    "\"http://\"+usuario+\":\"+contraseña+\"@\"+servidor+\":\"+puerto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(proxy)"
    ]
   }
  ],
