traduccion con google trans

--- a/ultimas-noticias/proxy/pruebas.ipynb
+++ b/ultimas-noticias/proxy/pruebas.ipynb
@@ -2,34 +2,190 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'proxy_ip': '45.147.60.243', 'proxy_port': '29842', 'username': 'dredon', 'password': 'xD7w0cPQ', 'proxy_status': 'online'}]\n",
-      "45.147.60.243\n",
-      "29842\n",
-      "dredon\n",
-      "xD7w0cPQ\n"
+      "Tema: vice-ganda\n",
+      "\n",
+      "\n",
+      "\n",
+      "VER: Karylle cumple años en 'It's Showtime'\n",
+      "Publicado el 22 de marzo a las 14:53\n",
+      "La cantante y actriz Karylle celebró su cumpleaños en 'It's Showtime' el miércoles. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda agradecido por ser nombrado presentador de entretenimiento más confiable\n",
+      "Publicado el 21 de marzo a las 15:05\n",
+      "Vice Ganda estaba desbordante de gratitud por haber sido galardonada como Presentadora de Variedades y Entretenimiento Más Confiable por Reader's Digest por quinta vez este año. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda es el presentador de entretenimiento más confiable\n",
+      "Publicado el 20 de marzo a las 16:09\n",
+      "Vice Ganda ha sido nombrada como una de las personalidades más confiables en los premios Reader's Digest Trusted Brands de 2023. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Carmina Villaroel admitió que Darren Espanto está aliviado\n",
+      "Publicado el 18 de marzo a las 18:49\n",
+      "El cantante de Kapamilya, Darren Espanto, admitió que Cassy Legaspi era su compañero de videollamadas cuando Vice Ganda lo atrapó recientemente. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda reveló que Darren Espanto está 'enamorado'\n",
+      "Publicado el 16 de marzo a las 22:42\n",
+      "El nuevo jurado de \"Tawag ng Tanghalan\" no sobrevivió en \"It's Showtime!\" que Darren Espanto fue objeto de burlas por parte del comediante Vice Ganda. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda, Ion Perez presentan nuevo 'bebé'\n",
+      "Actualizado el 16 de marzo a las 01:32\n",
+      "La pareja de celebridades Vice Ganda e Ion Perez tienen una nueva incorporación a su familia. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "MIRA: Vhong Navarro agradecido por decisión de la Corte Suprema\n",
+      "Actualizado el 14 de marzo a las 14:48\n",
+      "El comediante y presentador Vhong Navarro expresó su agradecimiento a la Corte Suprema, que ordenó la desestimación de dos casos penales presentados en su contra por Denice Cornejo. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Lo que dijo Vice Ganda sobre los principales contribuyentes famosos\n",
+      "Publicado el mar 11 00:41\n",
+      "La superestrella de la comedia Vice Ganda dijo que también fue reconocido por la Oficina de Impuestos Internos de su distrito como uno de los principales contribuyentes FIN\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Kylie Versoza tiene una llamada en medio de los problemas\n",
+      "Publicado el 09 de marzo a las 20:30\n",
+      "Kylie Versoza apeló al respeto para ella y todas las mujeres en medio de los problemas. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Películas de 2 Star Cinema, ya disponibles en Netflix\n",
+      "Publicado el 8 de marzo a las 18:27\n",
+      "\"Labyu With an Accent\" y \"Partners in Crime\" ya están disponibles en Netflix. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "'Labyu with an Accent' y 'Partners in Crime' llegarán a Netflix\n",
+      "Publicado el martes 08 11:38\n",
+      " Dos películas de Star Cinema ahora se dirigen a Netflix después de una exitosa presentación en el Festival de Cine de Metro Manila 2022 en diciembre pasado. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda programa el concierto de regreso de Araneta en junio\n",
+      "Mario Dumaual, actualizado el 7 de marzo a las 15:29\n",
+      "La superestrella de la comedia Vice Ganda hará su gran regreso en el Coliseo Araneta el 2 de junio.\n",
+      " ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda entra en el mes del nacimiento con una sesión de muñecas rosas\n",
+      "Publicado el 4 de marzo a las 14:31\n",
+      "\"¡Es la hora del espectáculo!\" El presentador y comediante Vice Ganda entró en su mes de nacimiento con una sesión de fotos con una muñeca rosa el viernes. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda realizará una gira de conciertos por Estados Unidos y Canadá en abril\n",
+      "Publicado el 3 de marzo a las 17:56\n",
+      "\"¡Es la hora del espectáculo!\" El principal presentador y comediante Vice Ganda viaja al extranjero una vez más para realizar una gira en los Estados Unidos y Canadá en abril. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "La chica adulta 'You Do Note' se encuentra de nuevo con Vice Ganda\n",
+      "Publicado el 23 de febrero a las 21:42\n",
+      "La chica viral 'You Do Note' ahora ha crecido cuando se cruza con 'It's Showtime!' anfitrión principal Vice Ganda. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda sorprendió al hijo Gigil Kid\n",
+      "Actualizado el 23 de febrero a las 07:57\n",
+      "La conexión y el amor entre Vice Ganda y su hijo Carlo Mendoza, quien en ese momento era apodado \"Gigil Kid\", no se ha perdido. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "MIRA: Niño de 4 años nombra a 17 presidentes de PH en 'Isip Bata'\n",
+      "Publicado el 20 de febrero a las 19:11\n",
+      "Un niño de cuatro años nombró con precisión a los 17 presidentes de Filipinas, en un momento adorable en el debut al mediodía de \"Isip Bata\", el nuevo segmento de juegos para niños de \"It's Showtime\". ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice Ganda agradecido por el éxito de 'Everybody Sing' S2\n",
+      "Publicado el 20 de febrero a las 16:56\n",
+      "El presentador Vice Ganda expresó su gratitud por la segunda temporada de 'Everybody, Sing!' después de su conclusión el domingo. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "'¡Todos, canten!': Amantes, ex ganan P1-M\n",
+      "Actualizado el 20 de febrero a las 08:45\n",
+      "Los amantes y ex se llevaron a casa P1 millón en el último episodio de la segunda temporada de 'Everybody, Sing!' este domingo. ALETA\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Vice, Awra recrean escena viral de 'espagueti' en película\n",
+      "Publicado el 17 de febrero a las 17:43\n",
+      "La guerra por la comida continúa entre Vice Ganda y Awra Briguela. ALETA\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'http://dredon:xD7w0cPQ@45.147.60.243:29842'"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# La funcion de este script es el envio de las ultimas noticias de vice-ganda de abs-cbn news traducidas al español.\n",
     "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import smtplib\n",
+    "from email.message import EmailMessage\n",
     "import json\n",
+    "import re\n",
+    "from deep_translator import GoogleTranslator\n",
+    "\n",
+    "# definir proxy \n",
     "\n",
     "apiproxy = requests.get(\"https://api.myprivateproxy.net/v1/fetchProxies/json/full/cu47s8oxdjivgf14to3ey2vywlk2o4u9\")\n",
     "todos = json.loads(apiproxy.text)\n",
@@ -45,30 +201,35 @@
     "usuario = usuario.replace('\"','')\n",
     "contraseña = contraseña.replace('\"','')\n",
     "\n",
+    "proxies = {\"http\": \"http://\"+usuario+\":\"+contraseña+\"@\"+servidor+\":\"+puerto,\n",
+    "           \"https\": \"http://\"+usuario+\":\"+contraseña+\"@\"+servidor+\":\"+puerto}\n",
     "\n",
-    "print(servidor)\n",
-    "print(puerto)\n",
-    "print(usuario)\n",
-    "print(contraseña)\n",
     "\n",
-    "\"http://\"+usuario+\":\"+contraseña+\"@\"+servidor+\":\"+puerto"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(proxy)"
+    "encabezados = {\n",
+    "    \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36\"\n",
+    "}\n",
+    "\n",
+    "url = \"https://news.abs-cbn.com/list/tag/vice-ganda\"\n",
+    "\n",
+    "respuesta = requests.get(url, headers = encabezados, proxies = proxies)\n",
+    "\n",
+    "soup = BeautifulSoup(respuesta.text, 'html.parser')\n",
+    "\n",
+    "lista_de_vice = soup.find_all(\"section\", class_=\"section-more-stories\")\n",
+    "\n",
+    "for vice in lista_de_vice:\n",
+    "    vice_ganda = vice.find('p').text\n",
+    "#    pregunta_descripcion = pregunta.find('div', class_=\"s-post-summary--content-excerpt\")\n",
+    "    vice_ganda = vice.text.replace(\"Read more »\", \"FIN\").replace(\"12345\", \"\").replace(\">\",\"\").replace(\"Last\",\"\").replace(\"ABS-CBN News\",\"\").rstrip()\n",
+    "    # .replace(\" \", \"\").replace(\"\\r\", \"\")\n",
+    "\n",
+    "# la cuota de deepl se va agotar, hay que buscar implementacion con googletrans o alguna alternativa\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Traducir con googletrans\n",
+    "noticias_traducida = GoogleTranslator(source='auto', target='es').translate(vice_ganda) \n",
+    "print(noticias_traducida)\n"
    ]
   }
  ],
