prueba hecha con googltrans

--- a/ultimas-noticias/proxy/pruebas.ipynb
+++ b/ultimas-noticias/proxy/pruebas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
       "\n",
       "VER: Karylle cumple años en 'It's Showtime'\n",
       "Publicado el 22 de marzo a las 14:53\n",
-      "La cantante y actriz Karylle celebró su cumpleaños en 'It's Showtime' el miércoles. ALETA\n",
+      "La cantante y actriz Karylle celebró su cumpleaños en 'It's Showtime' el miércoles. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -23,7 +23,7 @@
       "\n",
       "Vice Ganda agradecido por ser nombrado presentador de entretenimiento más confiable\n",
       "Publicado el 21 de marzo a las 15:05\n",
-      "Vice Ganda estaba desbordante de gratitud por haber sido galardonada como Presentadora de Variedades y Entretenimiento Más Confiable por Reader's Digest por quinta vez este año. ALETA\n",
+      "Vice Ganda estaba desbordante de gratitud por haber sido galardonada como Presentadora de Variedades y Entretenimiento Más Confiable por Reader's Digest por quinta vez este año. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -31,7 +31,7 @@
       "\n",
       "Vice Ganda es el presentador de entretenimiento más confiable\n",
       "Publicado el 20 de marzo a las 16:09\n",
-      "Vice Ganda ha sido nombrada como una de las personalidades más confiables en los premios Reader's Digest Trusted Brands de 2023. ALETA\n",
+      "Vice Ganda ha sido nombrada como una de las personalidades más confiables en los premios Reader's Digest Trusted Brands de 2023. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -39,7 +39,7 @@
       "\n",
       "Carmina Villaroel admitió que Darren Espanto está aliviado\n",
       "Publicado el 18 de marzo a las 18:49\n",
-      "El cantante de Kapamilya, Darren Espanto, admitió que Cassy Legaspi era su compañero de videollamadas cuando Vice Ganda lo atrapó recientemente. ALETA\n",
+      "El cantante de Kapamilya, Darren Espanto, admitió que Cassy Legaspi era su compañero de videollamadas cuando Vice Ganda lo atrapó recientemente. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -47,7 +47,7 @@
       "\n",
       "Vice Ganda reveló que Darren Espanto está 'enamorado'\n",
       "Publicado el 16 de marzo a las 22:42\n",
-      "El nuevo jurado de \"Tawag ng Tanghalan\" no sobrevivió en \"It's Showtime!\" que Darren Espanto fue objeto de burlas por parte del comediante Vice Ganda. ALETA\n",
+      "El nuevo jurado de \"Tawag ng Tanghalan\" no sobrevivió en \"It's Showtime!\" que Darren Espanto fue objeto de burlas por parte del comediante Vice Ganda. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -58,7 +58,7 @@
       "\n",
       "Vice Ganda, Ion Perez presentan nuevo 'bebé'\n",
       "Actualizado el 16 de marzo a las 01:32\n",
-      "La pareja de celebridades Vice Ganda e Ion Perez tienen una nueva incorporación a su familia. ALETA\n",
+      "La pareja de celebridades Vice Ganda e Ion Perez tienen una nueva incorporación a su familia. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -66,7 +66,7 @@
       "\n",
       "MIRA: Vhong Navarro agradecido por decisión de la Corte Suprema\n",
       "Actualizado el 14 de marzo a las 14:48\n",
-      "El comediante y presentador Vhong Navarro expresó su agradecimiento a la Corte Suprema, que ordenó la desestimación de dos casos penales presentados en su contra por Denice Cornejo. ALETA\n",
+      "El comediante y presentador Vhong Navarro expresó su agradecimiento a la Corte Suprema, que ordenó la desestimación de dos casos penales presentados en su contra por Denice Cornejo. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -82,7 +82,7 @@
       "\n",
       "Kylie Versoza tiene una llamada en medio de los problemas\n",
       "Publicado el 09 de marzo a las 20:30\n",
-      "Kylie Versoza apeló al respeto para ella y todas las mujeres en medio de los problemas. ALETA\n",
+      "Kylie Versoza apeló al respeto para ella y todas las mujeres en medio de los problemas. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -90,7 +90,7 @@
       "\n",
       "Películas de 2 Star Cinema, ya disponibles en Netflix\n",
       "Publicado el 8 de marzo a las 18:27\n",
-      "\"Labyu With an Accent\" y \"Partners in Crime\" ya están disponibles en Netflix. ALETA\n",
+      "\"Labyu With an Accent\" y \"Partners in Crime\" ya están disponibles en Netflix. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -98,7 +98,7 @@
       "\n",
       "'Labyu with an Accent' y 'Partners in Crime' llegarán a Netflix\n",
       "Publicado el martes 08 11:38\n",
-      " Dos películas de Star Cinema ahora se dirigen a Netflix después de una exitosa presentación en el Festival de Cine de Metro Manila 2022 en diciembre pasado. ALETA\n",
+      " Dos películas de Star Cinema ahora se dirigen a Netflix después de una exitosa presentación en el Festival de Cine de Metro Manila 2022 en diciembre pasado. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -107,7 +107,7 @@
       "Vice Ganda programa el concierto de regreso de Araneta en junio\n",
       "Mario Dumaual, actualizado el 7 de marzo a las 15:29\n",
       "La superestrella de la comedia Vice Ganda hará su gran regreso en el Coliseo Araneta el 2 de junio.\n",
-      " ALETA\n",
+      " FIN\n",
       "\n",
       "\n",
       "\n",
@@ -115,7 +115,7 @@
       "\n",
       "Vice Ganda entra en el mes del nacimiento con una sesión de muñecas rosas\n",
       "Publicado el 4 de marzo a las 14:31\n",
-      "\"¡Es la hora del espectáculo!\" El presentador y comediante Vice Ganda entró en su mes de nacimiento con una sesión de fotos con una muñeca rosa el viernes. ALETA\n",
+      "\"¡Es la hora del espectáculo!\" El presentador y comediante Vice Ganda entró en su mes de nacimiento con una sesión de fotos con una muñeca rosa el viernes. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -123,7 +123,7 @@
       "\n",
       "Vice Ganda realizará una gira de conciertos por Estados Unidos y Canadá en abril\n",
       "Publicado el 3 de marzo a las 17:56\n",
-      "\"¡Es la hora del espectáculo!\" El principal presentador y comediante Vice Ganda viaja al extranjero una vez más para realizar una gira en los Estados Unidos y Canadá en abril. ALETA\n",
+      "\"¡Es la hora del espectáculo!\" El principal presentador y comediante Vice Ganda viaja al extranjero una vez más para realizar una gira en los Estados Unidos y Canadá en abril. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -131,7 +131,7 @@
       "\n",
       "La chica adulta 'You Do Note' se encuentra de nuevo con Vice Ganda\n",
       "Publicado el 23 de febrero a las 21:42\n",
-      "La chica viral 'You Do Note' ahora ha crecido cuando se cruza con 'It's Showtime!' anfitrión principal Vice Ganda. ALETA\n",
+      "La chica viral 'You Do Note' ahora ha crecido cuando se cruza con 'It's Showtime!' anfitrión principal Vice Ganda. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -139,7 +139,7 @@
       "\n",
       "Vice Ganda sorprendió al hijo Gigil Kid\n",
       "Actualizado el 23 de febrero a las 07:57\n",
-      "La conexión y el amor entre Vice Ganda y su hijo Carlo Mendoza, quien en ese momento era apodado \"Gigil Kid\", no se ha perdido. ALETA\n",
+      "La conexión y el amor entre Vice Ganda y su hijo Carlo Mendoza, quien en ese momento era apodado \"Gigil Kid\", no se ha perdido. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -147,7 +147,7 @@
       "\n",
       "MIRA: Niño de 4 años nombra a 17 presidentes de PH en 'Isip Bata'\n",
       "Publicado el 20 de febrero a las 19:11\n",
-      "Un niño de cuatro años nombró con precisión a los 17 presidentes de Filipinas, en un momento adorable en el debut al mediodía de \"Isip Bata\", el nuevo segmento de juegos para niños de \"It's Showtime\". ALETA\n",
+      "Un niño de cuatro años nombró con precisión a los 17 presidentes de Filipinas, en un momento adorable en el debut al mediodía de \"Isip Bata\", el nuevo segmento de juegos para niños de \"It's Showtime\". FIN\n",
       "\n",
       "\n",
       "\n",
@@ -155,7 +155,7 @@
       "\n",
       "Vice Ganda agradecido por el éxito de 'Everybody Sing' S2\n",
       "Publicado el 20 de febrero a las 16:56\n",
-      "El presentador Vice Ganda expresó su gratitud por la segunda temporada de 'Everybody, Sing!' después de su conclusión el domingo. ALETA\n",
+      "El presentador Vice Ganda expresó su gratitud por la segunda temporada de 'Everybody, Sing!' después de su conclusión el domingo. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -163,7 +163,7 @@
       "\n",
       "'¡Todos, canten!': Amantes, ex ganan P1-M\n",
       "Actualizado el 20 de febrero a las 08:45\n",
-      "Los amantes y ex se llevaron a casa P1 millón en el último episodio de la segunda temporada de 'Everybody, Sing!' este domingo. ALETA\n",
+      "Los amantes y ex se llevaron a casa P1 millón en el último episodio de la segunda temporada de 'Everybody, Sing!' este domingo. FIN\n",
       "\n",
       "\n",
       "\n",
@@ -171,7 +171,7 @@
       "\n",
       "Vice, Awra recrean escena viral de 'espagueti' en película\n",
       "Publicado el 17 de febrero a las 17:43\n",
-      "La guerra por la comida continúa entre Vice Ganda y Awra Briguela. ALETA\n"
+      "La guerra por la comida continúa entre Vice Ganda y Awra Briguela. FIN\n"
      ]
     }
    ],
